# wordle_solver

./: Cargo.toml
benches/: benchmarks.rs
benches/current_impl/: bench_strategy.rs  mod.rs  word_comparison.rs
benches/strategy_minimax/: array_counts.rs  hashmap_clue.rs  hashmap_int_id.rs  mod.rs  utils.rs  vec_counts.rs
benches/word_comparison/: bytearray.rs  bytearray_arr_to_arr.rs  bytearray_class_to_class_2pass.rs  bytearray_class_to_class_quadratic.rs  mod.rs  string_to_vector_quadratic.rs
benches/word_comparisons/: bytearray.rs  current_impl.rs  mod.rs
src/: lib.rs  main.rs  plots.rs  wordle.rs
src/wordle/: download_word_list.py  gameplay.rs  mod.rs  operators.rs  strategy.rs  tofrom_string.rs  utils.rs
src/wordle/strategy/: impls.rs  mod.rs  multi_impls.rs  traits.rs
