[package]
name = "wordle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rstest = "*"
structopt = "*"
rand = "*"

[dev-dependencies]
criterion = {version = "*", features=['html_reports']}
rand_chacha = "*"

[[bench]]
name = "benchmarks"
harness = false